--- a/content/post/2020-11-09-tarif-veri-yapilari/index.en.Rmd
+++ b/content/post/2020-11-09-tarif-veri-yapilari/index.en.Rmd
@@ -8,6 +8,8 @@ tags:
   - dataframe
   - Liste
   - vector
+series:
+- Tarifler
 slug: tarif-veri-yapilari
 description: Temel R işlemlerinin tarifleri.
 featured: yes
