--- a/content/post/2020-10-21-r-ile-iki-degiskenli-bivariate-analiz/index.en.Rmd
+++ b/content/post/2020-10-21-r-ile-iki-degiskenli-bivariate-analiz/index.en.Rmd
@@ -8,7 +8,7 @@ categories:
 tags:
   - Istatistik
 description: R ile iki değişken arasında ilişkiyi inceleme yöntemleri.
-featured: yes
+featured: no
 #toc: no
 #featureImage: /images/path/file.jpg
 #thumbnail: /images/path/thumbnail.png
