--- a/content/post/2020-10-24-cok-degiskenli-regresyon-modeli/index.en.Rmd
+++ b/content/post/2020-10-24-cok-degiskenli-regresyon-modeli/index.en.Rmd
@@ -10,7 +10,7 @@ tags:
 slug:
   - cok-degiskenli-regresyon-modeli
 description: R ile çok değişkenli regresyon modeli hesaplanması ve sonuçların yorumlanması.
-featured: yes
+featured: no
 thumbnail: /images/thumbs/multireg_tn.jpg
 shareImage: /logos/slogo.jpeg
 codeMaxLines: 10
