--- a/content/post/2020-10-28-knitr-ve-rmarkdown-ile-dinamik-belgeler/index.en.Rmd
+++ b/content/post/2020-10-28-knitr-ve-rmarkdown-ile-dinamik-belgeler/index.en.Rmd
@@ -9,7 +9,7 @@ tags:
   - knitr
   - rmarkdown
 description: knitr paketini kullanarak Rmarkdown ve LATEX dökümanlar oluşturmak.
-featured: yes
+featured: no
 #toc: no
 #featureImage: /images/path/file.jpg
 thumbnail: /images/thumbs/knitr_tn.jpg
