--- a/content/post/2020-11-04-tidyverse-ile-makroekonomik-analiz/index.en.Rmd
+++ b/content/post/2020-11-04-tidyverse-ile-makroekonomik-analiz/index.en.Rmd
@@ -9,7 +9,7 @@ tags:
   - ggplot2
   - tidyverse
 description: tidyverse ve ameco paketlerini kullanarak makroekonomik analiz.
-featured: yes
+featured: no
 #toc: no
 #featureImage: /images/path/file.jpg
 thumbnail: /images/thumbs/tidyverse_tn.jpg
