--- a/content/post/2020-11-07-shiny-ile-interaktif-grafikler/index.en.Rmd
+++ b/content/post/2020-11-07-shiny-ile-interaktif-grafikler/index.en.Rmd
@@ -8,7 +8,7 @@ categories:
 tags:
   - Shiny
 description: R shiny paketiyle etkileşimle web app üretimi.
-featured: yes
+featured: no
 #toc: no
 #featureImage: /images/path/file.jpg
 thumbnail: /images/thumbs/shiny_tn.jpg
