--- a/content/post/2020-11-09-r-ile-turkce-icin-basit-bir-stemmer/index.en.Rmd
+++ b/content/post/2020-11-09-r-ile-turkce-icin-basit-bir-stemmer/index.en.Rmd
@@ -8,7 +8,7 @@ categories:
 tags:
   - Stemmer
 description: Türkçe kelimelerin köklerini ayırmayı sağlayan bir stemmer denemesi.
-featured: yes
+featured: no
 #toc: no
 #featureImage: /images/path/file.jpg
 thumbnail: /images/thumbs/stem_tn.jpg
