--- a/content/post/2020-10-22-dogrusal-regresyon-ile-regresyon-analizi/index.en.Rmd
+++ b/content/post/2020-10-22-dogrusal-regresyon-ile-regresyon-analizi/index.en.Rmd
@@ -9,7 +9,7 @@ tags:
   - Dogrusal Regresyon
   - Linear Regression
 description: R ile doğrusal doğrusal regresyon analizi yapılması ve çıktıların yorumlanması.
-featured: yes
+featured: no
 #toc: no
 #featureImage: /images/path/file.jpg
 thumbnail: /images/thumbs/lregress_tn.jpg
