--- a/content/post/2020-10-31-r-ile-metin-analizi-kelime-cesitliligi/index.en.Rmd
+++ b/content/post/2020-10-31-r-ile-metin-analizi-kelime-cesitliligi/index.en.Rmd
@@ -10,7 +10,7 @@ tags:
   - Metin Analizi
   - Text Analysis
 description: R ile metin analizi yaparak kelime sıklıklarının ölçülmesi.
-featured: yes
+featured: no
 #toc: no
 #featureImage: /images/path/file.jpg
 thumbnail: /images/thumbs/text_tn.jpg
