--- a/content/post/2020-11-03-ggplot2-ile-betimsel-descriptive-analiz-grafikleri/index.en.Rmd
+++ b/content/post/2020-11-03-ggplot2-ile-betimsel-descriptive-analiz-grafikleri/index.en.Rmd
@@ -8,7 +8,7 @@ categories:
 tags:
   - ggplot2
 description: ggplot ile beitmsel istatistik analizleri, grafikleri.
-featured: yes
+featured: no
 #toc: no
 #featureImage: /images/path/file.jpg
 thumbnail: /images/thumbs/ggplot_tn.jpg
